--- a/wp-content/themes/calidra/assets/css/style.css
+++ b/wp-content/themes/calidra/assets/css/style.css
@@ -602,6 +602,10 @@ footer .footer-bottom-border {
   height: 500px;
 }
 
+.home-resto-contenido .container .usos-cotidianos h3 {
+  margin-top: -90px;
+}
+
 .home-resto-contenido .container .home-blog {
   background: url("../img/home/blog.jpg") center center no-repeat;
   background-size: cover;
@@ -1507,14 +1511,25 @@ footer .footer-bottom-border {
 }
 
 .usos-cotidianos-acordeon-item-body {
+  position: relative;
   max-height: 0;
   overflow: hidden;
   -webkit-transition: all 500ms ease-in-out;
   transition: all 500ms ease-in-out;
+  width: 1100px;
+  max-width: 100%;
+  margin: 0 auto;
 }
 
 .usos-cotidianos-acordeon-item-body.is-active {
   max-height: 1000px;
+}
+
+.usos-cotidianos-acordeon-item-body-nav {
+  position: absolute;
+  top: 50px;
+  left: 100px;
+  z-index: 10;
 }
 
 .seccion-template-desc {
