--- a/wp-content/themes/calidra/assets/css/style.css
+++ b/wp-content/themes/calidra/assets/css/style.css
@@ -1541,10 +1541,41 @@ footer .footer-bottom-border {
   padding: 50px 0;
 }
 
+.usos-cotidianos-acordeon-item-body-circulo {
+  position: relative;
+}
+
 @media screen and (min-width: 1024px) {
   .usos-cotidianos-acordeon-item-body-circulo {
     margin-left: -15%;
   }
+}
+
+.usos-cotidianos-acordeon-item-body-circulo .play-button {
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  -webkit-transform: translate(50%, -50%);
+          transform: translate(50%, -50%);
+  width: 100px;
+  height: 100px;
+  background-color: rgba(237, 29, 36, 0.95);
+  border-radius: 100%;
+}
+
+.usos-cotidianos-acordeon-item-body-circulo .play-button .play-arrow {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 44px;
+  height: 44px;
+  border-style: solid;
+  border-width: 22px 0 22px 44px;
+  border-color: transparent transparent transparent #ffffff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-40%, -50%);
+          transform: translate(-40%, -50%);
 }
 
 .usos-cotidianos-acordeon-item-body-texto {
@@ -1558,6 +1589,10 @@ footer .footer-bottom-border {
   margin: 0 auto;
   overflow: hidden;
   font-family: "Lato", sans-serif;
+}
+
+.usos-cotidianos-acordeon-item-body .usos-carousel-cont#limpieza .slider-navigation-previous, .usos-cotidianos-acordeon-item-body .usos-carousel-cont#limpieza .slider-navigation-next {
+  top: 150px;
 }
 
 .usos-cotidianos-acordeon-item-body .usos-carousel-cont h2 {
@@ -1922,7 +1957,7 @@ footer .footer-bottom-border {
   padding: 80px 0 50px;
   background-color: #dbdbdb;
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .blog-thumbnails h2 {
@@ -2005,20 +2040,27 @@ footer .footer-bottom-border {
   }
 }
 
-.blog-thumbnails .container .carousel {
+.blog-thumbnails-contenedor {
+  width: 1000px;
+  max-width: 100%;
+  margin: 0 auto;
   overflow: hidden;
 }
 
-.blog-thumbnails .container .carousel .car-item {
+.blog-thumbnails-contenedor .carousel {
+  overflow: hidden;
+}
+
+.blog-thumbnails-contenedor .carousel .car-item {
   padding: 0 15px;
 }
 
-.blog-thumbnails .container .carousel .car-item img {
+.blog-thumbnails-contenedor .carousel .car-item img {
   width: 100%;
   margin-bottom: 20px;
 }
 
-.blog-thumbnails .container .carousel .car-item p {
+.blog-thumbnails-contenedor .carousel .car-item p {
   font-family: "Century Gothic", sans-serif;
   font-weight: bold;
   font-size: 1.8rem;
@@ -2349,7 +2391,7 @@ footer .footer-bottom-border {
           transform: translate(-50%, -50%);
   width: 100px;
   height: 100px;
-  background-color: red;
+  background-color: #ed1d24;
   border-radius: 100%;
 }
 
@@ -2533,7 +2575,7 @@ footer .footer-bottom-border {
   padding: 15px;
 }
 
-.video-cont {
+.video-cont-fullscreen {
   position: fixed;
   top: 0;
   left: 0;
@@ -2554,22 +2596,22 @@ footer .footer-bottom-border {
   transition: opacity 400ms ease-in-out;
 }
 
-.video-cont .youtube-cont {
+.video-cont-fullscreen .youtube-cont {
   position: relative;
   max-width: 85%;
 }
 
-.video-cont .youtube-cont iframe {
+.video-cont-fullscreen .youtube-cont iframe {
   max-width: 100%;
 }
 
 @media screen and (max-width: 1023px) {
-  .video-cont .youtube-cont iframe {
+  .video-cont-fullscreen .youtube-cont iframe {
     max-height: 400px;
   }
 }
 
-.video-cont .youtube-cont .close {
+.video-cont-fullscreen .youtube-cont .close {
   cursor: pointer;
   position: absolute;
   right: 0;
@@ -2582,17 +2624,17 @@ footer .footer-bottom-border {
           transform: translate(50%, -50%);
 }
 
-.video-cont .youtube-cont .close:before {
+.video-cont-fullscreen .youtube-cont .close:before {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
 }
 
-.video-cont .youtube-cont .close::after {
+.video-cont-fullscreen .youtube-cont .close::after {
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
 }
 
-.video-cont .youtube-cont .close:before, .video-cont .youtube-cont .close:after {
+.video-cont-fullscreen .youtube-cont .close:before, .video-cont-fullscreen .youtube-cont .close:after {
   position: absolute;
   top: 8px;
   left: 24px;
