Set ficha tecnica

--- a/wp-content/themes/calidra/assets/css/style.scss
+++ b/wp-content/themes/calidra/assets/css/style.scss
@@ -1664,6 +1664,10 @@ footer{
             @include minWidth($lg){
                 justify-content: flex-start;
             }
+            a{
+                display: flex;
+                align-items: center;
+            }
             span{
                 &:first-of-type{
                     width: 80px;
