--- a/wp-content/themes/calidra/assets/css/style.css
+++ b/wp-content/themes/calidra/assets/css/style.css
@@ -2501,6 +2501,15 @@ footer .footer-bottom-border {
   }
 }
 
+.producto-interior-cont-ficha a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .producto-interior-cont-ficha span:first-of-type {
   width: 80px;
   height: 80px;
