--- a/wp-content/themes/calidra/assets/css/scss/mixins.scss
+++ b/wp-content/themes/calidra/assets/css/scss/mixins.scss
@@ -19,9 +19,15 @@
     line-height: 1.5rem;
     text-transform: uppercase;
     cursor: pointer;
+    transition: transform 50ms ease-in-out;
     @include minWidth(1024px){
         font-size: 2rem;
         line-height: 2rem;
+    }
+    &:hover{
+        color: $bg-color;
+        transform: scale(1.1);
+        background-color: $font-color;
     }
 }
 @mixin fontLine($font-size, $line-height){
