Fixed a missing semicolon in style.scss

--- a/wp-content/themes/calidra/assets/css/style.scss
+++ b/wp-content/themes/calidra/assets/css/style.scss
@@ -628,7 +628,7 @@ footer{
         padding: 150px 0 0;
         @include fullWidthSection();
         .contenedor{
-            @include especificContainer(1200px)
+            @include especificContainer(1200px);
             .corporativo-iniciativas{
                 width: 800px;
                 max-width: 100%;
