--- a/wp-content/themes/calidra/assets/css/style.css
+++ b/wp-content/themes/calidra/assets/css/style.css
@@ -328,7 +328,15 @@ footer .footer-bottom-border {
   background-color: rgba(237, 29, 36, 0.85);
   width: 40%;
   height: 100%;
-  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 @media screen and (min-width: 1024px) {
@@ -338,11 +346,6 @@ footer .footer-bottom-border {
 }
 
 .hero-banner .hero-copy-container .hero-copy {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  -webkit-transform: translate(50%, -50%);
-          transform: translate(50%, -50%);
   color: #ffffff;
   font-family: "Century Gothic", sans-serif;
   font-size: 3rem;
@@ -350,16 +353,15 @@ footer .footer-bottom-border {
   font-weight: bold;
   width: 60vw;
   text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.65);
+  margin-right: -100%;
 }
 
 @media screen and (min-width: 1024px) {
   .hero-banner .hero-copy-container .hero-copy {
     font-size: 6rem;
     line-height: 6rem;
-    right: -50px;
-    -webkit-transform: translate(0, -50%);
-            transform: translate(0, -50%);
     width: 90%;
+    margin-right: -100px;
   }
 }
 
@@ -696,7 +698,15 @@ footer .footer-bottom-border {
   background-color: rgba(0, 0, 0, 0.63);
   width: 40%;
   height: 100%;
-  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 @media screen and (min-width: 1024px) {
@@ -706,24 +716,18 @@ footer .footer-bottom-border {
 }
 
 .contacto-banner .contacto-copy-container .contacto-copy {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  -webkit-transform: translate(50%, -50%);
-          transform: translate(50%, -50%);
   color: #ffffff;
   font-family: "Century Gothic", sans-serif;
   font-size: 1.3rem;
   line-height: 1.9rem;
   width: 60vw;
   text-shadow: 1px 1px 8px rgba(0, 0, 0, 0.65);
+  margin-right: -100%;
 }
 
 @media screen and (min-width: 1024px) {
   .contacto-banner .contacto-copy-container .contacto-copy {
-    right: -50px;
-    -webkit-transform: translate(0, -50%);
-            transform: translate(0, -50%);
+    margin-right: -100px;
     width: 90%;
   }
 }
@@ -2754,5 +2758,34 @@ footer .footer-bottom-border {
   width: 2px;
   border-radius: 5px;
   background-color: #808080;
+}
+
+.reliable-old-lady, .reliable-old-lady-right, .reliable-old-lady-up, .reliable-old-lady-down {
+  -webkit-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
+  -webkit-transform: translate(-200px, 0);
+          transform: translate(-200px, 0);
+  opacity: 0;
+}
+
+.reliable-old-lady.animado, .reliable-old-lady-right.animado, .reliable-old-lady-up.animado, .reliable-old-lady-down.animado {
+  opacity: 1;
+  -webkit-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
+.reliable-old-lady-right {
+  -webkit-transform: translate(200px, 0);
+          transform: translate(200px, 0);
+}
+
+.reliable-old-lady-up {
+  -webkit-transform: translate(0, -200px);
+          transform: translate(0, -200px);
+}
+
+.reliable-old-lady-down {
+  -webkit-transform: translate(0, 150px);
+          transform: translate(0, 150px);
 }
 /*# sourceMappingURL=style.css.map */
