--- a/wp-content/themes/calidra/assets/css/style.scss
+++ b/wp-content/themes/calidra/assets/css/style.scss
@@ -175,26 +175,24 @@ footer{
         background-color: rgba($color: $calidra-red, $alpha: .85);
         width: 40%;
         height: 100%;
-        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
         @include minWidth($lg){
             width: 25%;
         }
         .hero-copy{
-            position: absolute;
-            top: 50%;
-            right: 0;
-            transform: translate(50%, -50%);
             color: #ffffff;
             font-family: $century;
             @include fontLine(3rem, 3rem);
             font-weight: bold;
             width: 60vw;
             text-shadow: $outter-shadow;
+            margin-right: -100%;
             @include minWidth($lg){
                 @include fontLine(6rem, 6rem);
-                right: -50px;
-                transform: translate(0, -50%);
                 width: 90%;
+                margin-right: -100px;
             }
             @include minWidth($xxxl){
                 right: -230px;
@@ -420,23 +418,21 @@ footer{
         background-color: rgba($color: #000000, $alpha: .63);
         width: 40%;
         height: 100%;
-        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
         @include minWidth($lg){
             width: 25%;
         }
         .contacto-copy{
-            position: absolute;
-            top: 50%;
-            right: 0;
-            transform: translate(50%, -50%);
             color: #ffffff;
             font-family: $century;
             @include fontLine(1.3rem, 1.9rem);
             width: 60vw;
             text-shadow: $outter-shadow;
+            margin-right: -100%;
             @include minWidth($lg){
-                right: -50px;
-                transform: translate(0, -50%);
+                margin-right: -100px;
                 width: 90%;
             }
             @include minWidth($xxxl){
@@ -1793,4 +1789,22 @@ footer{
             }
         }
     }
+}
+.reliable-old-lady, .reliable-old-lady-right, .reliable-old-lady-up, .reliable-old-lady-down{
+    transition: all 500ms ease-in-out;
+    transform: translate(-200px, 0);
+    opacity: 0;
+    &.animado{
+        opacity: 1;
+        transform: translate(0, 0);
+    }
+}
+.reliable-old-lady-right{
+    transform: translate(200px, 0);
+}
+.reliable-old-lady-up{
+    transform: translate(0, -200px);
+}
+.reliable-old-lady-down{
+    transform: translate(0, 150px);
 }
